# vecdcs

./: README.md
acl2016_eval/: get_MSRSentComp-model.sh  get_enwiki-model.sh
acl2016_eval/phrase_similarity/: GS2011-converted.txt  GS2012-converted.txt  SVO.txt  mitchell10-AN.txt  mitchell10-NN.txt  mitchell10-VO.txt
acl2016_eval/phrase_similarity/original/: GS2011data.txt  GS2012data.txt  (+2 more)
acl2016_eval/relation_classification/: semeval10t8_test_converted.txt  semeval10t8_test_parsed.txt
cpp/: CMakeLists.txt  DCS_Tree_Reader.h  Makefile  Simple_DCS_Node.cpp  Simple_DCS_Node.h  Simple_VecDCS_Node.cpp  Simple_VecDCS_Node.h  Trainer.cpp  Trainer.h  Trainer_Aux.cpp  Trainer_Aux.h  VecDCS_Model.cpp  VecDCS_Model.h  VecDCS_NoRole_Model.cpp  VecDCS_NoRole_Model.h  count_roles.cpp  count_words.cpp  see_model.cpp  train.cpp
cpp/acl2016_eval/: phrase_similarity.cpp  relation_classification_svm_feature.cpp  sentence_completion.cpp
data/: get_enwiki-partial-parsed.sh
data/enwiki_partial/: get_enwiki-partial-parsed.sh
en_stanford_parser_util/: parse-command.sh
en_stanford_parser_util/parse_working/: fnlist.txt
en_stanford_parser_util/src/: Dispatcher.java  ParserFailSafe.java
mylib/cpp/: DAO.cpp  DAO.h  Fibonacci_Heap.h  Makefile  Matrix_Aux.cpp  Matrix_Aux.h  Random_Generator.cpp  Random_Generator.h  Spearmans_Rho.h  Vocab_Aux.cpp  Vocab_Aux.h  Weight_Sampler.cpp  Weight_Sampler.h
scala/dcstree_simple/: Node.scala  POS.scala  Tree.scala  Word.scala
script/: lexparser.sh  make_vocab.sh  parse_files.sh
stanford_parser_run/: ParserFailSafe.java
(+24 files in other folders)
